user is now notified properly when they input invalid details in login/register, password fields can be toggled on and off for visibility, added animation fluidity to labels and inputs, fixed various code style

--- a/frontend/app/styles/auth.css
+++ b/frontend/app/styles/auth.css
@@ -1,11 +1,18 @@
 .header-logo {
-    margin-top: 100px;
+    font-family: 'Music';
+    margin-top: 12px;
+    margin-bottom: 12px;
     padding: 0 0;
+    font-size: 72px;
+    font-weight: 700;
 }
 
 .auth-header {
-    margin: 0 0;
+    font-size: 36px;
+    margin: 0px 0px 0px 0px;
     padding: 0 0;
+    font-weight: 400;
+    align-self: flex-start;
 }
 
 .auth-screen {
@@ -15,46 +22,107 @@
     width: 100vw;
     height: 100vh;
     margin: 0 0;
-    padding-top: -1000px;
+    overflow-y: auto;
 }
 
 .auth-container {
+    width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px 50px 10px 50px;
-    box-shadow: 1px 1px 5px 0px rgb(106, 106, 106);
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    /* border: 2px solid #8a8a8a;
+    border-radius: 4px;
+    padding: 24px 64px 24px 64px;
+    box-shadow: 2px 2px 4px 0px rgb(106, 106, 106); */
+}
+
+.input-container {
+    display: flex;
+    flex-direction: horizontal;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    position: relative;
+    margin-top: 20px;
 }
 
 .form-inputs {
     width: 100%;
-    margin: 5px;
-    padding: 10px;
+    padding: 12px;
     border: 1px solid #ccc;
-    border-radius: 3px;
+    border-radius: 8px;
     box-sizing: border-box;
-    transition: border-color 0.3s;
+    transition: border-color 1s;
 }
 
 .form-inputs:focus {
-    border-color: #00c3ff;
+    border-color: #0004ff;
     outline: none;
 }
 
-.button1 {
-    margin: 5px;
-    padding: 10px 20px;
+.input-container label {
+    position: absolute;
     font-size: 16px;
+    left: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #8a8a8a;
+    transition: top 0.5s, font-size 0.5s, color 0.5s;
+    pointer-events: none;
+    z-index: 1;
+}
+
+.form-inputs:focus + label,
+.form-inputs:not(:placeholder-shown) + label {
+    top: -20%;
+    font-size: 12px;
+    color: #555;
+}
+
+.password-container {
+    position: relative;
+}
+
+.password-toggle {
+    position: absolute;
+    height: 24px;
+    width: 24px;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.button1 {
+    width: 100%;
+    margin: 8px;
+    padding: 12px 24px;
+    font-size: 18px;
     color: white;
-    background-color: rgb(28, 28, 28);
+    background-color: rgb(150, 153, 255);
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
 }
 
 .button1:hover {
     background-color: #5a6268;
+}
+
+.error-message-container {
+    align-self: flex-start;
+    height: 24px;
+}
+
+.error-message {
+    color: red;
+    font-size: 12px;
+    align-self: flex-start;
+}
+
+.auth-text {
+    font-size: 12px;
 }
