--- a/frontend/app/styles/fonts.css
+++ b/frontend/app/styles/fonts.css
@@ -3,8 +3,15 @@
     src: url('./app/fonts/cats.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
-  }
+}
+
+@font-face {
+  font-family: 'Music';
+  src: url('./app/fonts/music.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
 
 * {
-    font-family: 'Cat', sans-serif;
+    font-family: 'Helvetica';
 }
